deploy/k8s/base/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sandbox-isolation
  namespace: cybersnare
spec:
  podSelector:
    matchLabels:
      app: sandbox
  policyTypes: [Ingress, Egress]
  ingress: []
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: sinkhole
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deception-to-logger
  namespace: cybersnare
spec:
  podSelector:
    matchLabels:
      app: deception-sensor
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: logger
      ports:
        - protocol: TCP
          port: 8088
